[project]
name = "ingestion-modules"
version = "0.1.0"
description = "Maintaining a separate virt env for ingestion modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect==16.4.*",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]
